syntax = "proto3";

option csharp_namespace = "PersistenceDataAccess";

package seller;

message SellerRequest {
  int32 id = 1;
}

message AddressModelSeller{
  string city = 1;
  string streetName = 2;
  int32 postCode = 3;
}

message UserModelResponseSeller{
  int32 Id = 1;
  string firstName = 2;
  string lastName = 3;
  AddressModelSeller address = 4;
  int32 phoneNumber = 5;
  string email = 6;
}

message CreateUserModelRequestSeller{
  string firstName = 2;
  string lastName = 3;
  AddressModelSeller address = 4;
  int32 phoneNumber = 5;
  string email = 6;
}

message CreateSellerRequest {
  CreateUserModelRequestSeller user = 1;
  int32 cvr = 2;
  string companyName = 3;
  string description = 4;
  string type = 5;
  string website = 6;
  float rating = 7;
}

message SellerResponse {
  UserModelResponseSeller user = 1;
  int32 cvr = 2;
  string companyName = 3;
  string description = 4;
  string type = 5;
  string website = 6;
  float rating = 7;
}

service SellerService {
  rpc createSeller(CreateSellerRequest) returns (SellerResponse);
  rpc getSellerByCvr(SellerRequest) returns (SellerResponse);
  rpc deleteSellerByCvr(SellerRequest) returns (SellerResponse);
}